--- a/compton.conf
+++ b/compton.conf
@@ -1,9 +1,6 @@
 # GLX backend
 backend = "glx"
-#vsync = "opengl";       # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
-# glx-no-stencil = true;
-# glx-no-rebind-pixmap = true;
-# glx-swap-method = "undefined";
+vsync = "opengl-swc";       # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
  
 # Shadow
 shadow = true;
@@ -41,21 +38,6 @@ fade-delta = 7;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 fade-exclude = [ ];
- 
-# Other
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-use-ewmh-active-win = false;
-detect-rounded-corners = true;
-detect-client-opacity = true;
-#refresh-rate = 0;
-dbe = false;
-#paint-on-overlay = false;
-#unredir-if-possible = false;
-focus-exclude = [ ];
-detect-transient = true;
-detect-client-leader = true;
-invert-color-include = [ ];
  
 # Window type settings
 wintypes:
